chore: remove commons-codec after java8 migration